java-auth/k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-auth-prod
  labels:
    environment: prod
