java-auth/k8s/overlays/prod/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-auth
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: java-auth
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          initialDelaySeconds: 90
          periodSeconds: 30
        readinessProbe:
          initialDelaySeconds: 60
          periodSeconds: 10
